Still trying to fix scroll on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -34,7 +34,7 @@ h1.logo {
   height: 25vh;
   color: #fff;
   padding: 1rem;
-  margin: 2rem -1rem 0;
+  margin: 0 -1rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,19 +122,20 @@ h1.logo {
 
 .guess-input-wrapper {
   width: 100%;
+  position: relative;
 }
 
 .autocomplete-wrapper {
-  position: relative;
   display: flex;
   width: 100%;
-}
-
-ul.autocomplete-list {
   position: absolute;
   bottom: 100%;
   left: 0;
   width: 100%;
+}
+
+ul.autocomplete-list {  
+  
   max-height: 160px;
   overflow-y: scroll;
   margin: 0;
